--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -53,7 +53,7 @@
          <x>0</x>
          <y>0</y>
          <width>620</width>
-         <height>542</height>
+         <height>543</height>
         </rect>
        </property>
        <property name="maximumSize">
@@ -179,7 +179,7 @@
            </size>
           </property>
           <property name="text">
-           <string>Save as</string>
+           <string>Save As</string>
           </property>
          </widget>
         </item>
@@ -196,7 +196,7 @@
           </property>
          </widget>
         </item>
-        <item row="6" column="1">
+        <item row="8" column="1">
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -241,6 +241,26 @@
           </property>
           <property name="text">
            <string>Brightness</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="1">
+         <widget class="QSlider" name="ContrastSlider">
+          <property name="maximum">
+           <number>200</number>
+          </property>
+          <property name="value">
+           <number>100</number>
+          </property>
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="1">
+         <widget class="QLabel" name="ContrastLabel">
+          <property name="text">
+           <string>Contrast</string>
           </property>
          </widget>
         </item>
