--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -159,7 +159,7 @@
         <property name="verticalSpacing">
          <number>12</number>
         </property>
-        <item row="0" column="0">
+        <item row="1" column="0">
          <widget class="QPushButton" name="OpenImageButton">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
@@ -178,7 +178,7 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
+        <item row="2" column="0">
          <widget class="QPushButton" name="SaveImageButton">
           <property name="minimumSize">
            <size>
@@ -194,7 +194,7 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="0">
+        <item row="3" column="0">
          <widget class="QPushButton" name="SaveAsImageButton">
           <property name="minimumSize">
            <size>
@@ -207,7 +207,7 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="4" column="0">
          <widget class="QPushButton" name="QuitButton">
           <property name="minimumSize">
            <size>
@@ -220,7 +220,7 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
+        <item row="5" column="1">
          <widget class="QLabel" name="BrightnessLabel">
           <property name="minimumSize">
            <size>
@@ -233,7 +233,7 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
+        <item row="6" column="1">
          <widget class="QSlider" name="horizontalSlider">
           <property name="minimumSize">
            <size>
@@ -255,14 +255,14 @@
           </property>
          </widget>
         </item>
-        <item row="6" column="1">
+        <item row="7" column="1">
          <widget class="QLabel" name="ContrastLabel">
           <property name="text">
            <string>Contrast</string>
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="8" column="1">
          <widget class="QSlider" name="ContrastSlider">
           <property name="maximum">
            <number>200</number>
@@ -275,7 +275,7 @@
           </property>
          </widget>
         </item>
-        <item row="8" column="1">
+        <item row="9" column="1">
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -287,6 +287,42 @@
            </size>
           </property>
          </spacer>
+        </item>
+        <item row="0" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <item>
+           <widget class="QPushButton" name="previousButton">
+            <property name="maximumSize">
+             <size>
+              <width>70</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Previous</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="nextButton">
+            <property name="maximumSize">
+             <size>
+              <width>70</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Next</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
