--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+   <sizepolicy hsizetype="Ignored" vsizetype="Expanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -20,6 +20,12 @@
    <size>
     <width>804</width>
     <height>800</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777214</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -53,6 +59,18 @@
         <height>1080</height>
        </size>
       </property>
+      <property name="sizeIncrement">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="baseSize">
+       <size>
+        <width>1920</width>
+        <height>1080</height>
+       </size>
+      </property>
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
@@ -80,9 +98,15 @@
          <height>709</height>
         </rect>
        </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>1920</width>
+         <width>16777214</width>
          <height>1080</height>
         </size>
        </property>
@@ -94,12 +118,6 @@
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>1920</width>
-            <height>1080</height>
-           </size>
           </property>
           <property name="cursor">
            <cursorShape>ArrowCursor</cursorShape>
@@ -234,7 +252,7 @@
          </widget>
         </item>
         <item row="6" column="1">
-         <widget class="QSlider" name="horizontalSlider">
+         <widget class="QSlider" name="brightnessSlider">
           <property name="minimumSize">
            <size>
             <width>150</width>
