--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -104,12 +104,6 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777214</width>
-         <height>1080</height>
-        </size>
-       </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLabel" name="imageLabel">
@@ -376,6 +370,9 @@
             <width>150</width>
             <height>16777215</height>
            </size>
+          </property>
+          <property name="minimum">
+           <number>1</number>
           </property>
           <property name="maximum">
            <number>100</number>
