--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -132,7 +132,7 @@
            <bool>true</bool>
           </property>
           <property name="alignment">
-           <set>Qt::AlignCenter</set>
+           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
           </property>
          </widget>
         </item>
@@ -253,8 +253,11 @@
             <height>0</height>
            </size>
           </property>
+          <property name="minimum">
+           <number>1</number>
+          </property>
           <property name="maximum">
-           <number>100</number>
+           <number>99</number>
           </property>
           <property name="value">
            <number>50</number>
@@ -276,8 +279,11 @@
         </item>
         <item row="8" column="1">
          <widget class="QSlider" name="ContrastSlider">
+          <property name="minimum">
+           <number>1</number>
+          </property>
           <property name="maximum">
-           <number>200</number>
+           <number>199</number>
           </property>
           <property name="value">
            <number>100</number>
