--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -247,6 +247,25 @@
           </item>
          </layout>
         </item>
+        <item row="10" column="1">
+         <widget class="QPushButton" name="readButton">
+          <property name="minimumSize">
+           <size>
+            <width>150</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>150</width>
+            <height>16777215</height>
+           </size>
+          </property>
+          <property name="text">
+           <string>Read Image</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </item>
      </layout>
@@ -449,6 +468,7 @@ selection-background-color: rgb(170, 0, 0);</string>
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="actionRead_Image"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
@@ -496,6 +516,11 @@ selection-background-color: rgb(170, 0, 0);</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+S</string>
+   </property>
+  </action>
+  <action name="actionRead_Image">
+   <property name="text">
+    <string>Read Image</string>
    </property>
   </action>
  </widget>
